--- a/Todo/index.html
+++ b/Todo/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="images/pen-icon.png">
-
-    
-    <script src="https://kit.fontawesome.com/97543b6a54.js" crossorigin="anonymous"></script>
-    <title>ToDo</title> 
+    <script src="https://kit.fontawesome.com/97543b6a54.js"></script>
+    <title>ToDo</title>
 </head>
+
 <body>
     <h1>To do</h1>
+
     <div class="card glassmorphism">
-        <ul class="emojis-list">
-        </ul>
+        <ul class="emojis-list"></ul>
         <div class="input-item">
             <input class="add-input" type="text" placeholder="Add item">
             <button type="button" class="add-button">Add</button>
         </div>
-        <ul class="list-items">
-        </ul>
+        <ul class="list-items"></ul>
     </div>
 
-    <script src="index.js"></script>
+    <script src="js/index.js" type="module"></script>
 </body>
+
 </html>
