--- a/Todo/index.html
+++ b/Todo/index.html
@@ -12,13 +12,18 @@
 </head>
 
 <body>
-    <h1>To do</h1>
+    <div class="title-element">
+        <h1 contenteditable="true" class="title">To do</h1>
+        <i class="fas fa-pen"></i>
+    </div>
 
     <div class="card glassmorphism">
-        <ul class="emojis-list"></ul>
-        <div class="input-item">
-            <input class="add-input" type="text" placeholder="Add item">
-            <button type="button" class="add-button">Add</button>
+        <div class="emojis-and-input">
+            <ul class="emojis-list"></ul>
+            <div class="input-item">
+                <input class="add-input" type="text" placeholder="Add item">
+                <button type="button" class="add-button">Add</button>
+            </div>
         </div>
         <ul class="list-items"></ul>
     </div>
