--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,16 +12,16 @@
 
     <title>Quotely</title>
 </head>
+
 <body>
     <div class="logo">
         <img src="images/logo.png" alt="logo">
     </div>
     <button type="button" class="add-quote">Add Quote</button>
-    <div class="cards">
-    </div>
-    <div class="add-quote-form">
+    <div class="cards"></div>
 
-        <form method="post">
+    <div class="add-quote-form">
+        <form>
             <fieldset>
                 <label for="img"> Image
                     <input type="file" id="img-file">
