--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/97543b6a54.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="images/icon---.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/icon-.png" type="image/x-icon">
 
     <link rel="stylesheet" href="styles/style.css">
 
