--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -14,9 +14,17 @@
 </head>
 
 <body>
-    <div class="logo">
-        <img src="images/logo.png" alt="logo">
-    </div>
+    <header class="header">
+        <div></div>
+        <div class="logo">
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div class="modes">
+            <div title="Light mode" class="light-mode mode"></div>
+            <div title="Night mode" class="night-mode mode"></div>
+            <div title="Dark mode" class="dark-mode mode"></div>
+        </div>
+    </header>
     <button type="button" class="add-quote">Add Quote</button>
     <div class="cards"></div>
 
