added project LocalStorage

--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -32,17 +32,17 @@
         <form>
             <fieldset>
                 <label for="img"> Image
-                    <input type="file" id="img-file">
+                    <input type="file" id="img-file" required>
                 </label>
             </fieldset>
             <fieldset>
                 <label for="writer"> Writer
-                    <input type="text" name="writer" id="writer" placeholder="Enter writer">
+                    <input type="text" name="writer" id="writer" placeholder="Enter writer" required>
                 </label>
             </fieldset>
             <fieldset>
                 <label for="content"> Quote
-                    <input type="text" name="content" id="content" placeholder="Enter Quote">
+                    <input type="text" name="content" id="content" placeholder="Enter Quote" required>
                 </label>
             </fieldset>
             <button type="button" id="submit-btn">Add</button>
