--- a/LocalStorage/index.html
+++ b/LocalStorage/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <h1>Student Information System</h1>
-        <form>
-            <input type="text" name="name" placeholder="Student name" id="name-input" autocomplete="off">
-            <input type="number" name="age" placeholder="Student age" id="age-input">
-            <input type="number" name="roll" placeholder="Student roll" id="roll-input">
+        <form id="student-form">
+            <input type="text" name="name" placeholder="Student name" autocomplete="off">
+            <input type="number" name="age" placeholder="Student age">
+            <input type="number" name="roll" placeholder="Student roll">
             <button id="add-btn">Add student</button>
         </form>
         <div class="student-details">
