made some changes

--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -20,9 +20,9 @@
             <img src="images/logo.png" alt="logo">
         </div>
         <div class="modes">
-            <div title="Light mode" class="light-mode mode"></div>
-            <div title="Night mode" class="night-mode mode"></div>
-            <div title="Dark mode" class="dark-mode mode"></div>
+            <div title="Light mode" class="light-mode mode" name="light-mode"></div>
+            <div title="Night mode" class="night-mode mode" name="night-mode"></div>
+            <div title="Dark mode" class="dark-mode mode" name="dark-mode"></div>
         </div>
     </header>
     <button type="button" class="add-quote">Add Quote</button>
@@ -32,7 +32,7 @@
         <form>
             <fieldset>
                 <label for="img"> Image
-                    <input type="file" id="img-file" required>
+                    <input type="file" name="img" id="img">
                 </label>
             </fieldset>
             <fieldset>
@@ -45,7 +45,7 @@
                     <input type="text" name="content" id="content" placeholder="Enter Quote" required>
                 </label>
             </fieldset>
-            <button type="button" id="submit-btn">Add</button>
+            <button type="submit" id="submit-btn">Add</button>
         </form>
         <i class="fa-solid fa-x"></i>
     </div>
