made some changes

--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div></div>
+        <div style="width: 70px;"></div>
         <div class="logo">
             <img src="images/logo.png" alt="logo">
         </div>
