made some changes

--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -16,15 +16,17 @@
 <body>
     <header class="header">
         <div class="modes">
-            <div title="Light mode" class="light-mode mode" name="light-mode"></div>
-            <div title="Night mode" class="night-mode mode" name="night-mode"></div>
-            <div title="Dark mode" class="dark-mode mode" name="dark-mode"></div>
+            <div title="Light mode" class="mode" name="light-mode"></div>
+            <div title="Night mode" class="mode" name="night-mode"></div>
+            <div title="Dark mode" class="mode" name="dark-mode"></div>
         </div>
         <div class="logo">
             <img src="images/logo.png" alt="logo">
         </div>
-        <div class="user">
-            <i class="fa-solid fa-user"></i> <span contenteditable="true">Name</span> ~
+        <div class="modes">
+            <div title="Light mode" class="light-mode mode" name="light-mode"></div>
+            <div title="Night mode" class="night-mode mode" name="night-mode"></div>
+            <div title="Dark mode" class="dark-mode mode" name="dark-mode"></div>
         </div>
     </header>
     <button type="button" class="add-quote">Add Quote</button>
