added new themes

--- a/quotely-js/index.html
+++ b/quotely-js/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="images/icon-.png" type="image/x-icon">
 
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/modes.css">
 
     <title>Quotely</title>
 </head>
@@ -16,17 +17,17 @@
 <body>
     <header class="header">
         <div class="modes">
-            <div title="Light mode" class="mode" name="light-mode"></div>
-            <div title="Night mode" class="mode" name="night-mode"></div>
-            <div title="Dark mode" class="mode" name="dark-mode"></div>
+            <div class="mode-4 mode"></div>
+            <div class="mode-5 mode"></div>
+            <div class="mode-6 mode"></div>
         </div>
         <div class="logo">
             <img src="images/logo.png" alt="logo">
         </div>
         <div class="modes">
-            <div title="Light mode" class="light-mode mode" name="light-mode"></div>
-            <div title="Night mode" class="night-mode mode" name="night-mode"></div>
-            <div title="Dark mode" class="dark-mode mode" name="dark-mode"></div>
+            <div title="Light mode" class="light-mode mode"></div>
+            <div title="Night mode" class="night-mode mode"></div>
+            <div title="Dark mode" class="dark-mode mode"></div>
         </div>
     </header>
     <button type="button" class="add-quote">Add Quote</button>
