--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="images/clock-icon3.png" type="image/x-icon">
     <title>Stopwatch</title>
 </head>
-<body>
+<body class="light-mode">
     <div class="container">
 
         <h1>Stopwatch</h1>
