made small change

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -12,7 +12,7 @@
 
         <h1>Stopwatch</h1>
         <!-- toggle switch -->
-        <div class="switch">
+        <div class="switch light-mode">
             <span class="slider"></span>
         </div>
         <div class="time-container time-container-light">
