--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>TicTac Toe</title>
+    <link rel="shortcut icon" href="images/tictactoe-icon2.png" type="image/x-icon">
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <div id="game-container"">
