--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -25,7 +25,7 @@
         <div class="cur-player">
             <h2 class="status-text">Player X's turn</h2>
         </div>
-        <button type="button" id="reset-button">Reset</button>
+        <button type="button" id="reset-button">Restart</button>
     </div>
 
     <script src="js/index.js"></script>
