--- a/timer/index.html
+++ b/timer/index.html
@@ -10,7 +10,24 @@
 <body>
     <h1 class="heading">Timer</h1>
     <div class="timer-container">
-        <div class="time-display">00:00:00</div>
+        <div class="time-display">
+            <div class="day">
+                <div class="day-num num">00</div>
+                <h1>Day</h1>
+            </div>
+            <div class="hour">
+                <div class="hour-num num">00</div>
+                <h1>Hour</h1>
+            </div>
+            <div class="minute">
+                <div class="min-num num">00</div>
+                <h1>Minute</h1>
+            </div>
+            <div class="second">
+                <div class="sec-num num">00</div>
+                <h1>Seconds</h1>
+            </div>
+        </div>
         <button id="start-btn" class="timer-btn-bg">Start</button>
         <button id="reset-btn" class="timer-btn-bg">Reset</button>
     </div>
