made some changes

--- a/timer/index.html
+++ b/timer/index.html
@@ -31,7 +31,9 @@
         <button id="start-btn" class="timer-btn-bg">Start</button>
         <button id="reset-btn" class="timer-btn-bg">Reset</button>
     </div>
-    
+    <div class="to-date">
+        
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
