--- a/harry-potter/index.html
+++ b/harry-potter/index.html
@@ -16,6 +16,6 @@
         <div class="details-card"></div>
     </div>
 
-    <script src="/js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
